# scrap-journal

./: .gitignore  pyproject.toml
scrap_journal/: main.py
