[tool.poetry]
name = "scrap-journal"
version = "0.0.1"
description = "Convert your tweets into a journal for Scrapbox."
authors = ["ryoshid <r.yoshida.c@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests_oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sjnl = "scrap_journal.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
